Upgrade tools in docker container and clean up bootstrap scripts

--- a/dev-setup/docker/Dockerfile
+++ b/dev-setup/docker/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:20.04 AS spectrum4_too_much
+# syntax=docker/dockerfile:1.3
+
+FROM ubuntu:22.10 AS spectrum4_too_much
 MAINTAINER Pete Moore <petemoore@gmx.net>
 COPY ./ubuntu/bootstrap-ubuntu.sh /
 RUN ./bootstrap-ubuntu.sh
