--- a/dev-setup/docker/Dockerfile
+++ b/dev-setup/docker/Dockerfile
@@ -13,7 +13,7 @@ RUN ./bootstrap-ubuntu.sh
 # the files that are needed. Unfortunately, aarch64-none-elf-gdb is not able to
 # connect to a remote qemu debugging server using this method, so for now I am
 # disabling it. This means the pmoore/spectrum4 docker images will be much
-# bigger, but at least they still work. If at some point we work out while
+# bigger, but at least they still work. If at some point we work out why
 # additional files are needed for aarch64-none-elf-gdb remote debugging to
 # work, we can return to stripped down images...
 #
